# jinja_prompt_chaining_system

./: .gitignore  PR_SUMMARY.md  README.md  dumper_test.yaml  llm_spec.md  parallel_proof_results.html  pyproject.toml  response.json  sample_prompt.txt  setup.cfg  test_fix.py  test_yaml_fix.py
examples/: chained_example.jinja  chained_example_context.yaml  comma_output.txt  comma_query.jinja  complex_context.yaml  complex_output.txt  complex_query.jinja  context.yaml  controlled_parallelism_proof.py  direct_parallelism_test.py  final_test_pipe.jinja  final_test_pipe_context.yaml  final_test_pipe_output.txt  global_llmquery_context.yaml  global_llmquery_example.jinja  html_not_escaped.jinja  html_not_escaped_context.yaml  html_not_escaped_output.html  html_not_escaped_parallel.html  mixed_output.txt  mixed_query.jinja  multiline_context.yaml  multiline_output.txt  multiline_streaming.jinja  named_run_demo.jinja  named_run_demo_context.yaml  non_streaming.jinja  non_streaming_context.yaml  non_streaming_output.txt  parallel_demo.jinja  parallel_demo.py  parallel_result.html  parallel_timing_demo.jinja  parallel_timing_demo.py  parallel_with_timestamps.jinja  parallelism_proof.py  parallelism_test_results.html  run_html_not_escaped.py  run_named_demo.py  run_named_demo.sh  (+8 more)
logs/: comma_query_2025-05-04T20-55-45-526250_0.log.yaml  complex_query_2025-05-04T20-55-57-983761_0.log.yaml  final_test_pipe_2025-05-04T21-36-52-094341_0.log.yaml  mixed_query_2025-05-04T20-55-54-189435_0.log.yaml  multiline_streaming_2025-05-04T21-30-25-410586_0.log.yaml  non_streaming_2025-05-04T20-56-50-757366_0.log.yaml  non_streaming_2025-05-04T21-26-05-413331_0.log.yaml  simple_query_2025-05-04T20-55-29-021240_0.log.yaml  simple_query_2025-05-04T21-25-47-929820_0.log.yaml  test_yaml_pipe_2025-05-04T21-35-00-403828_0.log.yaml  test_yaml_pipe_2025-05-04T21-36-07-667157_0.log.yaml
test_run/: test.jinja
(+60 files in other folders)
