[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jinja_prompt_chaining_system"
version = "0.1.0"
description = "A Jinja-based prompt chaining system for LLM interactions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "click>=8.0.0",
]

[project.scripts]
jinja-run = "jinja_prompt_chaining_system.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function" 