[metadata]
name = jinja_prompt_chaining_system
description = A Jinja-based prompt chaining system for LLM interactions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/jinja_prompt_chaining_system
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11 